--- a/src/app/compnents/navbar-admin/navbar-admin.component.html
+++ b/src/app/compnents/navbar-admin/navbar-admin.component.html
@@ -41,6 +41,9 @@
           <li class="nav-item">
             <a class="nav-link" style="color: #fffffe;" routerLink="/addPlant" routerLinkActive="active">Ajouter une plante</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" style="color: #fffffe;" routerLink="/listeCommandes" routerLinkActive="active">Liste des commandes</a>
+          </li>
           
         </ul>
   
