--- a/src/app/compnents/liste-commandes/liste-commandes.component.html
+++ b/src/app/compnents/liste-commandes/liste-commandes.component.html
@@ -7,7 +7,7 @@
                 <tr>
                     <th scope="col">Nom et Prénom</th>
                     <th scope="col">ID Commande</th>
-                    <th scope="col" >Montant</th>
+                    <th scope="col">Montant</th>
                     <th scope="col">Téléphone</th>
                     <th scope="col">Adresse</th>
                     <th scope="col">État de la Commande</th>
@@ -17,50 +17,82 @@
             <tbody class="table-info">
                 @for(c of commandes;track $index){
                 <tr>
-                   
+
                     <td>{{c.nom}}</td>
                     <td>{{c.prenom}}</td>
-                    <td>{{c.total}}$</td>
+                    <td>{{c.total | number:'1.2-2'}}$</td>
                     <td>{{c.tel}}</td>
                     <td>{{c.adresse}}</td>
-                    <td><button (click)="onValiderCommande(c.id)" [ngClass]="(c.etat == 'en attente') ? 'btn btn-warning' : 'btn btn-success'">{{c.etat}}</button></td>
+                    <td><button (click)="onValiderCommande(c.id)"
+                            [ngClass]="(c.etat == 'en attente') ? 'btn btn-warning' : 'btn btn-success'">{{c.etat}}</button>
+                    </td>
                     <td>
                         <div class="d-flex justify-content-center gap-2">
-                            <button class="btn btn-primary btn-sm" type="button" 
-                                data-bs-toggle="offcanvas"
-                                data-bs-target="#$index" aria-controls="offcanvasExample" 
-                                title="Voir" >
+                            <button class="btn btn-primary btn-sm" type="button" (click)="getArticles(c.id)"
+                                data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample"
+                                aria-controls="offcanvasExample" title="Voir">
                                 <i class="bi bi-eye-fill"></i>
                             </button>
-                            <button class="btn btn-danger btn-sm" title="Supprimer" (click)="onDeleteCommande(c.id)"><i
-                                    class="bi bi-trash3-fill"></i>
+                            <button class="btn btn-danger btn-sm" title="Supprimer" data-bs-toggle="modal"
+                                [attr.data-bs-target]="'#exampleModal'+c.id">
+                                <i class="bi bi-trash3-fill"></i>
                             </button>
                         </div>
                     </td>
-                </tr>}
+                </tr>
+
+                <!-- Modal -->
+                <div class="modal fade" [id]="'exampleModal'+c.id" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="exampleModalLabel">Suppression de {{c.nom}}</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <p>Etes vous sure de vouloir supprimer la commande de <span
+                                        class="text-danger">{{c.nom}}</span> ?</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-danger" (click)="onDeleteCommande(c.id)"
+                                    data-bs-dismiss="modal">Supprimer</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                }
             </tbody>
         </table>
 
         <!-- Offcanvas: aperçu de la commande -->
-        @for(c of commandes;track $index){
-        <div class="offcanvas offcanvas-start bg-success" tabindex="-1" [id]="$index"
+        <div class="offcanvas offcanvas-start bg-success" tabindex="-1" id="offcanvasExample"
             aria-labelledby="offcanvasExampleLabel">
+            <!-- header -->
             <div class="offcanvas-header">
                 <div class="d-flex justify-content-between align-items-center w-100">
-                    <h5 class="offcanvas-title" id="offcanvasExampleLabel">Aperçu de la commande {{$index}}</h5>
-                    <p class="text-white" style="font-size: 1.2rem; margin: 0;">Total: {{c.total}}$</p>
+                    <h5 class="offcanvas-title" id="offcanvasExampleLabel">Aperçu de la commande</h5>
+                    <p class="text-white" style="font-size: 1.2rem; margin: 0;">Total: {{getTotal(articles) |
+                        number:'1.2-2'}}$</p>
                 </div>
-                
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
-            @for(p of c.articles;track $index){
-            <div class="offcanvas-body text-white">
-                <h3>{{p.name}}</h3>
-                <p>Prix: {{p.price}}$</p>
-                <p>Quantité: 2</p>
+            <!-- body -->
+            <div class="offcanvas-body text-white" style="margin-left: 20px;">
+                @for(a of articles;track $index){
+                <div class="item-container">
+                    <img [src]="a.images" alt="image" class="item-image">
+                    <div class="item-details">
+                        <h3>{{ a.name }}</h3>
+                        <p>Prix: {{ a.price }}$</p>
+                        <p>Quantité: {{ calculateQuantity(a.name) }}</p>
+                    </div>
+                </div>
                 <hr>
-                
-            </div>}
-        </div>}
+                }
+            </div>
+        </div>
     </div>
 </div>
