--- a/src/app/compnents/panier/panier.component.html
+++ b/src/app/compnents/panier/panier.component.html
@@ -15,20 +15,70 @@
         <span class="text-dark fw-bold fs-5">{{plant.name}}</span>
         <span class="text-danger fw-bold fs-5">{{plant.price | currency:'USD'}}</span>
         <div class="btn-group">
-            <button class="btn btn-primary" routerLink="/plant/{{plant.id}}/description" title="Voir"><i class="bi bi-eye-fill"></i></button>
-            <button class="btn btn-danger" (click)="deleteFromCart(plant)"  title="Supprimer"><i class="bi bi-trash3-fill"></i></button>
+            <button class="btn btn-primary" routerLink="/plant/{{plant.id}}/description" title="Voir"><i
+                    class="bi bi-eye-fill"></i></button>
+
+            <button class="btn btn-danger" 
+                    data-bs-toggle="modal" 
+                    [attr.data-bs-target]="'#exampleModal'+plant.id"
+                    title="Supprimer">
+                    <i class="bi bi-trash3-fill"></i>
+            </button>
         </div>
+        <!-- Modal -->
+        <div class="modal fade" [id]="'exampleModal'+plant.id" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="exampleModalLabel">Suppression de {{plant.name}}</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Etes vous sure de vouloir supprimer <span class="text-danger">{{plant.name}}</span> du panier ?</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-danger" (click)="deleteFromCart(plant)" data-bs-dismiss="modal">Supprimer</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
     }
     <!-- Boutons d'action -->
     <div class="text-center mt-3 d-flex justify-content-around">
-        <button class="btn btn-primary" routerLink="/passerCommande" title="Passer à la caisse">Passer au payement</button>
-        <button class="btn btn-danger" (click)="clearCart()" title="Vider le panier">Tout effacer</button>
+        <button class="btn btn-primary" routerLink="/passerCommande" title="Passer à la caisse">Passer au
+            payement</button>
+        <button class="btn btn-danger" 
+                data-bs-toggle="modal" 
+                [attr.data-bs-target]="'#exampleModalClear'"
+                title="Vider le panier">Tout effacer
+        </button>
+    </div>
+    <!-- Modal -->
+    <div class="modal fade" [id]="'exampleModalClear'" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Suppression de tous les produits</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Etes vous sure de vouloir supprimer tous les produits du panier ?</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-danger" (click)="clearCart()" data-bs-dismiss="modal">Effacer le panier</button>
+                </div>
+            </div>
+        </div>
     </div>
     }
     @else {
-        <div class="alert alert-success container text-center" role="alert">
-            Pas de coup de coeur ? vivsitez notre<a routerLink="/listePlantes" class="shop" title="Back to shop"> catalogue</a> 
-        </div>
+    <div class="alert alert-success container text-center" role="alert">
+        Pas de coup de coeur ? vivsitez notre<a routerLink="/listePlantes" class="shop" title="Back to shop">
+            catalogue</a>
+    </div>
     }
 </div>
