--- a/src/app/compnents/plant-comment-admin/plant-comment-admin.component.html
+++ b/src/app/compnents/plant-comment-admin/plant-comment-admin.component.html
@@ -11,11 +11,29 @@
                         <img src="https://i.imgur.com/AgAC1Is.jpg" width="18"><span class="text2">{{com.nom}}</span>
                     </div>
                     <div class="d-flex justify-content-between align-items-center gap-1">
-                        <button class="btn btn-danger" (click)="onDelete($index)" title="Supprimer"><i
+                        <button class="btn btn-danger" data-bs-toggle="modal" [attr.data-bs-target]="'#exampleModal'+com.nom" title="Supprimer"><i
                                 class="bi bi-trash3-fill"></i></button>
                         <span class="text3">{{com.nbLikes}}</span>
                         <button class="like"><i class="bi bi-emoji-heart-eyes"></i></button>
                     </div>
+                    <!-- Modal -->
+                    <div class="modal fade" [id]="'exampleModal'+com.nom" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="exampleModalLabel">Suppression du commentaire de {{com.nom}}</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Etes vous sure de vouloir supprimer le commentaire de <span class="text-danger">{{com.nom}}</span> ?</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-danger" (click)="onDelete($index)" data-bs-dismiss="modal">Supprimer</button>
+                    </div>
+                </div>
+            </div>
+        </div>
                 </div>
             </div>
         </div>
